# Kanban-Board

./: .dockerignore  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  chat.py  db.py  main.py  seed.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: AI.md  DATABASE.md  PLAN.md  code_review.md  review.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  BoardContainer.test.tsx  BoardContainer.tsx  CardContent.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.test.ts  kanban.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts
scripts/: AGENTS.md  docker-entrypoint.sh  start.ps1  start.sh  stop.ps1  stop.sh
