[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Kanban MVP: serves the API and proxies the Next.js frontend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
